--- a/submarine/submarine.html
+++ b/submarine/submarine.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>잠수함</title>
-    <!-- 25.04.16 - 3 -->
+    <!-- 25.04.17 -->
     <style>
       body {
-        background-color: #000;
+        background-color: #000000;
       }
       canvas {
         background-color: #0099ff;
@@ -16,5 +16,7 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="600"> </canvas>
+
+    <script src="submarine.js"></script>
   </body>
 </html>
